--- a/docs/foredrag/index.mdx
+++ b/docs/foredrag/index.mdx
@@ -1,10 +1,9 @@
 ---
-title: Foredrag
+title: Program
+hide_table_of_contents: true
 ---
 
 ```mdx-code-block
-import DocCardList from '@theme/DocCardList';
-import {useCurrentSidebarCategory} from '@docusaurus/theme-common';
 import Program from '../../src/components/Program'
 
 <div>
